--- a/changelog.txt
+++ b/changelog.txt
@@ -1,7 +1,8 @@
 
 Changelog
 
-2014.3.2    enchancement    #54 Allow selection of a custom XSL report defintion for reports.
+2014.3.3    enhancement     #55 Open up project job number for editing and enhance the search options
+2014.3.2    enhancement     #54 Allow selection of a custom XSL report defintion for reports.
 2014.3.1                    Add phinx for database migrations
             bug             #1 Sales Order Acknowledgement Print, lines overwrite header
             bug             #9 CRM Activities view loads calendar instead of activities
