--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,6 @@
 
 Changelog
+2014.3.7    bug             #70   Duplicate NI should be allowed in combination with finish date in HR - New Employee
 2014.3.6    enhancement           Show person name on Sales Quote print
             bug             #66   Regression in report definitions
             bug             #68   VAT totals incorrect on Sales Order Quote print
