--- a/changelog.txt
+++ b/changelog.txt
@@ -1,16 +1,16 @@
 
 Changelog
-            bug             #77   Warehouse locations without GL Accounts should be visible
-            bug             #76   Empty reponse when selecting User Space Tables from the menu
-            enhancement     #75   Make admin from email address configurable
+2014.3.9    bug             #77  Warehouse locations without GL Accounts should be visible
+            bug             #76  Empty response when selecting User Space Tables from the menu
+            enhancement     #75  Make admin from email address configurable
             enhancement           Changes expenses to link to make task selection dependent on project selection in expenses header				
             enhancement           Add project tasks to purchase order header and make dependent on project. Also fix small annoyance where address heading incorrect on view.
             bug                   Fix bug when editing a task the project should not be changed
             enhancement           Add Purchase orders sidebar link on projects
             bug                   Add NOT NULL constraint on project_id column in tasks table
             enhancement           Changes to allow projects and tasks in entered purchase invoices
-2014.3.8    bug             #71   CSV outputs are empty
-            enhancement           Changes to projects module
+2014.3.8    bug             #71  CSV outputs are empty
+            enhancement          Changes to projects module
                                   Tidy up projects controller:
                                     Removed code for old ezPDF 'reports' that no longer work
                                     Removed deprecated actions for a project
