--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,7 @@
 
 Changelog
+1.3.10      enhancement     #82  Make VAT amounts availabe to Sales Order Acknowledgement print
+            bug             #80  Closing final period of year fails when trying to update assets
 2014.3.9    bug             #77  Warehouse locations without GL Accounts should be visible
             bug             #76  Empty response when selecting User Space Tables from the menu
             enhancement     #75  Make admin from email address configurable
