--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,7 @@
 
 Changelog
+1.3.11      enhancement     #84  Allow empty sales orders to be cancelled
+            bug             #83  Sales Invoice created for customer on stop
 1.3.10      enhancement     #82  Make VAT amounts availabe to Sales Order Acknowledgement print
             bug             #80  Closing final period of year fails when trying to update assets
 2014.3.9    bug             #77  Warehouse locations without GL Accounts should be visible
